# scraper

./: .gitignore  main.py  organize_docs.py  setup.py
adk_docs_organized/: README_ESTRUCTURA.md
adk_docs_organized/01_introduccion/: adk_docs_get_started_about.txt
adk_docs_organized/03_agentes/tipos_de_agentes/: adk_docs_agents_custom_agents.txt  adk_docs_agents_llm_agents.txt
adk_docs_organized/03_agentes/workflow_agents/: adk_docs_agents_workflow_agents_loop_agents.txt
adk_docs_organized/04_herramientas/autenticacion/: adk_docs_tools_authentication.txt
adk_docs_organized/04_herramientas/integraciones/: adk_docs_tools_mcp_tools.txt
adk_docs_organized/05_streaming/implementacion/: adk_docs_streaming_custom_streaming.txt
adk_docs_organized/07_callbacks_eventos/: adk_docs_callbacks_design_patterns_and_best_practices.txt  adk_docs_callbacks_types_of_callbacks.txt  adk_docs_events.txt
adk_docs_organized/09_deploy_despliegue/plataformas/: adk_docs_deploy_gke.txt
adk_docs_organized/13_tutoriales_ejemplos/: adk_docs_tutorials_agent_team.txt
adk_docs_organized/14_comunidad_contribucion/: adk_docs_contributing_guide.txt
adk_docs_organized/15_recursos_adicionales/: adk_docs_artifacts.txt
adk_docs_txt/: adk_docs.txt  adk_docs_agents_multi_agents.txt  adk_docs_agents_workflow_agents_parallel_agents.txt  adk_docs_callbacks.txt  adk_docs_deploy.txt  adk_docs_get_started.txt  adk_docs_get_started_streaming.txt  adk_docs_get_started_streaming_quickstart_streaming_java.txt  adk_docs_get_started_testing.txt  adk_docs_observability_phoenix.txt  adk_docs_runtime.txt  adk_docs_runtime_runconfig.txt  adk_docs_sessions_session.txt  adk_docs_sessions_state.txt  adk_docs_streaming_custom_streaming_ws.txt  adk_docs_streaming_streaming_tools.txt  adk_docs_tools_google_cloud_tools.txt
docuScraped/: ADK_DOCUMENTACION_COMPLETA.md  create_consolidated_docs.py
docuScraped/adk_docs_txt/: adk_docs_api_reference.txt  adk_docs_api_reference_java.txt  adk_docs_context.txt  adk_docs_deploy_cloud_run.txt  adk_docs_get_started_installation.txt  adk_docs_mcp.txt  adk_docs_sessions_memory.txt  adk_docs_streaming.txt  adk_docs_tools_function_tools.txt  adk_docs_tools_third_party_tools.txt  adk_docs_tutorials.txt
restaurant_system/: .gitignore  FASE_1_COMPLETADA.md  FASE_2_COMPLETADA.md  FASE_3_COMPLETADA.md  FASE_4_COMPLETADA.md  FASE_5_COMPLETADA.md  README.md  README_PROYECTO_FINAL.md  __init__.py  api_server.py  demo_config_manager.py  demo_fase_2.py  demo_fase_4.py  demo_meta_agent_local.py  deployer.py  deployer_adk.py  deployer_adk_simple.py  deployer_meta_agent.py  deployer_meta_agent_simple.py  env_example.txt  main.py  pyproject.toml  requirements.txt  requirements_deployment.txt  setup_restaurant.py  simple_server.py  test_adk_deployed.py  test_meta_agent_simple.py  test_meta_agent_simulation.py  web_config.py
restaurant_system/agents/: food_agent.py  orchestrator_agent.py
restaurant_system/config/: system_config.py
restaurant_system/docs/: README.md
restaurant_system/restaurant_data/bistro_madrid/: metadata.json  restaurant_config.json
restaurant_system/restaurant_data/caf_madrid_test/: menu_data.json  metadata.json  restaurant_config.json
restaurant_system/restaurant_data/demo_restaurant/: menu_data.json  metadata.json  restaurant_config.json
restaurant_system/restaurant_data/pizza_palace/: metadata.json  restaurant_config.json
restaurant_system/schemas/: metadata_schema.json  restaurant_config_schema.json
restaurant_system/scripts/: format_code.sh
restaurant_system/src/restaurant/: __init__.py  cli.py  main.py  web_config.py
restaurant_system/src/restaurant/agents/: __init__.py  evalset2717ce.evalset.json  food_agent.py  modern_system.py  orchestrator_agent.py  root_agent.py
restaurant_system/src/restaurant/config/: config_manager.py  system_config.py
restaurant_system/templates/modern_casual/: metadata.json  restaurant_config.json
restaurant_system/templates/pizzeria/: menu_data.json  metadata.json  restaurant_config.json
restaurant_system/tests/evaluation/: restaurant_eval_set.evalset.json
restaurant_system/tests/unit/: test_orchestrator.py
restaurant_system/web_agents/bistro_madrid/: agent.py
restaurant_system/web_agents/caf_madrid_test/: __init__.py  agent.py
restaurant_system/web_agents/demo_restaurant/: agent.py
restaurant_system/web_agents/pizza_palace/: agent.py
restaurant_system/web_agents/schemas/: menu_data_schema.json
(+17 files in other folders)
